browser/css/mobilewizard.css
/* ... */
#mobile-wizard-content > #ScCellAppearancePropertyPanel + .ui-content.level-0.mobile-wizard .borderbutton.selected {
	-webkit-box-shadow: inset 0px 0px 0px 2px #0867af !important;
	box-shadow: inset 0px 0px 0px 2px #0867af !important;
}
.ui-header.mobile-wizard {
	width: 100%;
	height: 56px !important;
	font-size: var(--default-font-size) !important;
	margin: 0px;
	padding: 0px;
	border: solid 1px transparent;
	display: flex;
	flex-direction: row;
	align-items: center;
	background-color: var(--color-main-background);
	justify-content: space-between;
}

.ui-explorable-entry.mobile-wizard.disabled .ui-header .ui-header-left * {
	color: var(--color-text-lighter) !important;
}

.ui-header.mobile-wizard:active, .mobile-wizard.ui-combobox-text:active, .ui-header.mobile-wizard:focus, .mobile-wizard.ui-combobox-text:focus, .ui-header.mobile-wizard:hover, .mobile-wizard.ui-combobox-text:hover {
	background-color: #eee;
}

#mobile-wizard .ui-header.mobile-wizard-widebutton {
	width: 100%;
	height: 56px !important;
	font-size: var(--default-font-size) !important;
	margin: 0px;
	padding: 0px;
	border: solid 1px transparent;
	display: flex;
	flex-direction: row;
	align-items: center;
	background-color: var(--color-main-background);
}

#mobile-wizard .ui-content .unobutton {
	width: 32px;
	height: 32px;
	vertical-align: middle;
}

#mobile-wizard .ui-content.unobutton.selected {
	box-shadow: 0 0 0px 8px var(--color-background-dark);
	border-radius: var(--border-radius);
	background-color: var(--color-background-dark);
}

.unotoolbutton.disabled, .mobile-wizard-widebutton.disabled {
	color: silver;
}

.unotoolbutton.disabled img, .mobile-wizard-widebutton.disabled img {
	-webkit-filter: grayscale(90%) brightness(120%);
	filter: grayscale(90%) brightness(120%);
	opacity: 0.75;
}

.mobile-wizard.unotoolbutton .arrowbackground {
	display: none;
}

#mobile-wizard-content .ui-content > table > tr > td > table > table > tr:first-child > td > img{
	margin-top: 0px !important;
}

.ui-content.unospan {
	line-height: 32px;
	display: table;
	padding-left: 4%;
}
.ui-content.unolabel {
	vertical-align: middle;
}

.sub-menu-title {
	padding-left: 4%;
}
.sub-menu-arrow {
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	-o-transform: rotate(180deg);
	transform: rotate(180deg);
	display: table-cell;
	padding-left: 10px;
	padding-right: 10px;
	background: url('images/lc_closedocmobile.svg') no-repeat left / 10px;
	font-size: 1.5em;
	font-weight: bold;
	color: transparent !important;
	vertical-align: middle;
	margin-right: 4%;
}

.func-info-icon {
	display: block;
	background: url('images/lc_helpindex.svg') no-repeat center;
	min-width: 28px;
	min-height: 28px;
}

.func-info-sig {
	margin: 1em 0px 1em 4%;
	font-weight: bold;
	color: #444444 !important;
}

.func-info-desc {
	margin-left: 4%;
}

.entry-value {
	display: table-cell;
	vertical-align: middle;
}

.ui-header-right {
	display: table;
	margin-right: 4%;
}
.ui-header-left {
	margin-left: 4%;
	max-width: 62% !important;
}
.ui-header.level-1.mobile-wizard.ui-widget .ui-header-left span.menu-entry-with-icon {
	vertical-align: middle;
}
.flex-fullwidth {
	flex-grow: 100;
}

.ui-tabs.mobile-wizard {
	text-align: center;
	height: 42px;
	display: flex;
	width: 100%;
	padding: 0px;
	overflow-x: auto;
}

#mobile-wizard-tabs {
	position: sticky;
	top: 0;
	z-index: 2;
	background-color: var(--color-background-lighter);
}

.ui-tab.mobile-wizard {
	flex: auto;
	display: table-cell;
	height: 36px;
	line-height: 36px;
	vertical-align: middle;
	margin: 0px 5%;
	border-radius: 10px;
	border: none;
	color: var(--color-text-lighter);
}

.ui-tab.selected.mobile-wizard {
	border: none;
	color: var(--color-primary);
	border-radius: 0px;
	border-bottom: solid 1px var(--color-primary-dark);
}

[id|='tb_colorselector'] .w2ui-tb-caption > div {
	height: 32px !important;
	width: 32px !important;
}

[name|='colorselector'] {
	width: 80px;
}

.colorimage {
	float: left;
	height: 32px;
}

.spinfieldcontrols {
	background-color: var(--color-background-darker);
	text-align: center;
	display: inline-block;
	vertical-align: middle;
	border-left: 1px solid var(--color-border-dark);
}

.spinfieldunit {
	color: var(--color-text-dark) !important;
	width: 30px;
	margin: 0px 10px;
}

.plus {
	border-left: 1px solid var(--color-border-dark);
	font-size: 22px;
	width: 48px;
	height: 48px;
	color: var(--color-text-dark) !important;
	display: table-cell;
	vertical-align: middle;
}
.minus {
	border-right: 1px solid var(--color-border-dark);
	font-size: 22px;
	width: 48px;
	height: 48px;
	color: var(--color-text-dark) !important;
	display: table-cell;
	vertical-align: middle;
}
.spinfieldcontainer .plus:active, .spinfieldcontainer .minus:active{
	background-color: var(--color-primary-lighter);
	font-weight: bold
}
.spinfieldimage {
	width: 24px;
	height: 24px;
	vertical-align: middle;
	padding-left: 8px;
}

.spinfieldcontainer .spinfieldcontrols {
	height: 49px;
	float: right;
}
.spinfieldcontainer input.spinfield:not(.sidebar) {
	padding-top: 0px;
}
.mobile-wizard input.spinfield:disabled {
	background: linear-gradient(to right, white 0%, #ebebe4 15%, #ebebe4 40%, white 100%);
	color: var(--color-text-lighter) !important;
	border-radius: var(--border-radius);
	height: 48px !important;
}

input.spinfield:disabled + .spinfieldunit {
	color: var(--color-text-lighter) !important;
}

input.spinfield:disabled ~ .spinfieldcontrols * {
	color: var(--color-text-lighter) !important;
	border-color: var(--color-border-lighter) !important;
	background-color: var(--color-background-lighter);
}

input.spinfield:disabled ~ .spinfieldcontrols *:active, input.spinfield:disabled ~ .spinfieldcontrols *:hover, input.spinfield:disabled ~ .spinfieldcontrols *:focus {
	background-color: var(--color-background-lighter) !important;
	filter: none;
	font-size: 100%;
	font-weight: normal;
}
/* ... */

